Fix logo vertical alignment when no flex

--- a/source/sass/patterns/organisms/site-header.scss
+++ b/source/sass/patterns/organisms/site-header.scss
@@ -16,10 +16,12 @@
   @include block-size($siteHeader-image-block_size__default);
   @include max-block-size(map_get($calculated, max-block-size--default));
   @include padding($siteHeader-image-inline_space__default, inline);
+  @include padding(($siteHeader-block_size__default - $siteHeader-block_start_space - $siteHeader-image-block_size__default) / 2, block-start);
   @include mq($from: medium) {
     @include block-size($siteHeader-image-block_size__medium);
     @include max-block-size(map_get($calculated, max-block-size--medium));
     @include padding($siteHeader-image-inline_space__medium, inline);
+    @include padding(($siteHeader-block_size__medium - $siteHeader-block_start_space - $siteHeader-image-block_size__medium) / 2, block-start);
   }
   @include mq($from: x-wide) {
     @include padding($siteHeader-image-inline_start_space__x_wide, inline-start);
@@ -123,6 +125,7 @@
   }
 
   @supports (--name: value) {
+    @include padding(0, block);
     @include block-size(var(--block-size));
     @include max-block-size(var(--max-block-size));
     @include padding(var(--inline-start-space) var(--inline-end-space), inline);
